--- a/Raw_data/kuopio_tahko.ipynb
+++ b/Raw_data/kuopio_tahko.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        " 'C:/Brights_Projects/MiniProject2/team_theta/Raw_data\\\\Tahko_snow_1.1.2014_1.12.2024_kuopiosnowdepth.csv']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        " 'C:/Brights_Projects/MiniProject2/team_theta/Raw_data\\\\Tahko_air_1.1.2014 - 1.12.2024_kuopioairtemp.csv']"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "[7591 rows x 6 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
        "[7591 rows x 7 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_concat_file(cloud_file_path, \"kuopio\", cloud_columns)"
+    "create_concat_file(cloud_file_path, \"tahko_1.1.2004-31.12.2024\", cloud_columns)"
    ]
   },
   {
@@ -717,7 +717,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156389</th>\n",
+       "      <th>156024</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -726,7 +726,7 @@
        "      <td>Clear (0/8)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156390</th>\n",
+       "      <th>156025</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -735,7 +735,7 @@
        "      <td>Clear (0/8)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156391</th>\n",
+       "      <th>156026</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -744,7 +744,7 @@
        "      <td>Cloudy (8/8)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156392</th>\n",
+       "      <th>156027</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -753,7 +753,7 @@
        "      <td>Mostly cloudy (7/8)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156393</th>\n",
+       "      <th>156028</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -763,7 +763,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>156394 rows × 6 columns</p>\n",
+       "<p>156029 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -774,11 +774,11 @@
        "3       Siilinjärvi Kuopio airport  2015      1    4              0:00   \n",
        "4       Siilinjärvi Kuopio airport  2015      1    5              0:00   \n",
        "...                            ...   ...    ...  ...               ...   \n",
-       "156389  Siilinjärvi Kuopio airport  2024     12   27              0:00   \n",
-       "156390  Siilinjärvi Kuopio airport  2024     12   28              0:00   \n",
-       "156391  Siilinjärvi Kuopio airport  2024     12   29              0:00   \n",
-       "156392  Siilinjärvi Kuopio airport  2024     12   30              0:00   \n",
-       "156393  Siilinjärvi Kuopio airport  2024     12   31              0:00   \n",
+       "156024  Siilinjärvi Kuopio airport  2024     12   27              0:00   \n",
+       "156025  Siilinjärvi Kuopio airport  2024     12   28              0:00   \n",
+       "156026  Siilinjärvi Kuopio airport  2024     12   29              0:00   \n",
+       "156027  Siilinjärvi Kuopio airport  2024     12   30              0:00   \n",
+       "156028  Siilinjärvi Kuopio airport  2024     12   31              0:00   \n",
        "\n",
        "          Cloud cover [1/8]  \n",
        "0              Cloudy (8/8)  \n",
@@ -787,22 +787,22 @@
        "3              Cloudy (8/8)  \n",
        "4       Mostly cloudy (7/8)  \n",
        "...                     ...  \n",
-       "156389          Clear (0/8)  \n",
-       "156390          Clear (0/8)  \n",
-       "156391         Cloudy (8/8)  \n",
-       "156392  Mostly cloudy (7/8)  \n",
-       "156393          Clear (0/8)  \n",
+       "156024          Clear (0/8)  \n",
+       "156025          Clear (0/8)  \n",
+       "156026         Cloudy (8/8)  \n",
+       "156027  Mostly cloudy (7/8)  \n",
+       "156028          Clear (0/8)  \n",
        "\n",
-       "[156394 rows x 6 columns]"
+       "[156029 rows x 6 columns]"
       ]
      },
-     "execution_count": 551,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kuopio_cloud = pd.read_csv(\"C:/Brights_Projects/MiniProject2/target/zip/kuopio_kuopiocloud.csv\")\n",
+    "kuopio_cloud = pd.read_csv(\"C:/Brights_Projects/MiniProject2/team_theta/target/zip/tahko_1.1.2004-31.12.2024_cloud.csv\")\n",
     "kuopio_cloud"
    ]
   },
@@ -903,7 +903,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156389</th>\n",
+       "      <th>156024</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -913,7 +913,7 @@
        "      <td>2024-12-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156390</th>\n",
+       "      <th>156025</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -923,7 +923,7 @@
        "      <td>2024-12-28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156391</th>\n",
+       "      <th>156026</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -933,7 +933,7 @@
        "      <td>2024-12-29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156392</th>\n",
+       "      <th>156027</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -943,7 +943,7 @@
        "      <td>2024-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>156393</th>\n",
+       "      <th>156028</th>\n",
        "      <td>Siilinjärvi Kuopio airport</td>\n",
        "      <td>2024</td>\n",
        "      <td>12</td>\n",
@@ -954,7 +954,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>156394 rows × 7 columns</p>\n",
+       "<p>156029 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -965,11 +965,11 @@
        "3       Siilinjärvi Kuopio airport  2015      1    4              0:00   \n",
        "4       Siilinjärvi Kuopio airport  2015      1    5              0:00   \n",
        "...                            ...   ...    ...  ...               ...   \n",
-       "156389  Siilinjärvi Kuopio airport  2024     12   27              0:00   \n",
-       "156390  Siilinjärvi Kuopio airport  2024     12   28              0:00   \n",
-       "156391  Siilinjärvi Kuopio airport  2024     12   29              0:00   \n",
-       "156392  Siilinjärvi Kuopio airport  2024     12   30              0:00   \n",
-       "156393  Siilinjärvi Kuopio airport  2024     12   31              0:00   \n",
+       "156024  Siilinjärvi Kuopio airport  2024     12   27              0:00   \n",
+       "156025  Siilinjärvi Kuopio airport  2024     12   28              0:00   \n",
+       "156026  Siilinjärvi Kuopio airport  2024     12   29              0:00   \n",
+       "156027  Siilinjärvi Kuopio airport  2024     12   30              0:00   \n",
+       "156028  Siilinjärvi Kuopio airport  2024     12   31              0:00   \n",
        "\n",
        "          Cloud cover [1/8]       Date  \n",
        "0              Cloudy (8/8) 2015-01-01  \n",
@@ -978,16 +978,16 @@
        "3              Cloudy (8/8) 2015-01-04  \n",
        "4       Mostly cloudy (7/8) 2015-01-05  \n",
        "...                     ...        ...  \n",
-       "156389          Clear (0/8) 2024-12-27  \n",
-       "156390          Clear (0/8) 2024-12-28  \n",
-       "156391         Cloudy (8/8) 2024-12-29  \n",
-       "156392  Mostly cloudy (7/8) 2024-12-30  \n",
-       "156393          Clear (0/8) 2024-12-31  \n",
+       "156024          Clear (0/8) 2024-12-27  \n",
+       "156025          Clear (0/8) 2024-12-28  \n",
+       "156026         Cloudy (8/8) 2024-12-29  \n",
+       "156027  Mostly cloudy (7/8) 2024-12-30  \n",
+       "156028          Clear (0/8) 2024-12-31  \n",
        "\n",
-       "[156394 rows x 7 columns]"
+       "[156029 rows x 7 columns]"
       ]
      },
-     "execution_count": 552,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
