--- a/testaus2_talvikuukaudet_linearregression.ipynb
+++ b/testaus2_talvikuukaudet_linearregression.ipynb
@@ -770,11 +770,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(X_test)\n"
+    "y_pred = model.predict(X_test)"
    ]
   },
   {
