Lahti poly model

--- a/multi_df_poly_model.ipynb
+++ b/multi_df_poly_model.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -155,15 +155,13 @@
        "4  isosyote  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "\n",
+    "''''\n",
     "file_paths = [\"final/isosyote_df.csv\", \n",
     "              \"final/kuusamo_df.csv\",\n",
     "              \"final/tahko_df.csv\", \n",
@@ -181,260 +179,32 @@
     "df = pd.concat(dataframes, ignore_index=True)\n",
     "\n",
     "# Tulostetaan ensimmäiset rivit\n",
-    "df.head()"
+    "df.head()\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Day</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Snow depth mean [cm]</th>\n",
-       "      <th>Average temperature [°C]</th>\n",
-       "      <th>cloud_code</th>\n",
-       "      <th>Global radiation mean [W/m2]</th>\n",
-       "      <th>location</th>\n",
-       "      <th>day_of_year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2004-01-01</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>-30.5</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>isosyote</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2004-01-02</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>-13.7</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>isosyote</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2004-01-03</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>-10.7</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>isosyote</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2004-01-04</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>-12.7</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-0.4</td>\n",
-       "      <td>isosyote</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2004-01-05</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>-14.6</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>isosyote</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38241</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>12</td>\n",
-       "      <td>27</td>\n",
-       "      <td>2024-12-27</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>-1.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.4</td>\n",
-       "      <td>pyha</td>\n",
-       "      <td>362</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38242</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>12</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2024-12-28</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>-2.6</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>pyha</td>\n",
-       "      <td>363</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38243</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>12</td>\n",
-       "      <td>29</td>\n",
-       "      <td>2024-12-29</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>-2.9</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>-0.7</td>\n",
-       "      <td>pyha</td>\n",
-       "      <td>364</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38244</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>12</td>\n",
-       "      <td>30</td>\n",
-       "      <td>2024-12-30</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>-6.2</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>-0.3</td>\n",
-       "      <td>pyha</td>\n",
-       "      <td>365</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38245</th>\n",
-       "      <td>2024</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2024-12-31</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>-4.5</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>-0.3</td>\n",
-       "      <td>pyha</td>\n",
-       "      <td>366</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>38246 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Year  Month  Day       Date  Snow depth mean [cm]  \\\n",
-       "0      2004      1    1 2004-01-01                  29.0   \n",
-       "1      2004      1    2 2004-01-02                  29.0   \n",
-       "2      2004      1    3 2004-01-03                  29.0   \n",
-       "3      2004      1    4 2004-01-04                  29.0   \n",
-       "4      2004      1    5 2004-01-05                  30.0   \n",
-       "...     ...    ...  ...        ...                   ...   \n",
-       "38241  2024     12   27 2024-12-27                  18.0   \n",
-       "38242  2024     12   28 2024-12-28                  18.0   \n",
-       "38243  2024     12   29 2024-12-29                  18.0   \n",
-       "38244  2024     12   30 2024-12-30                  17.0   \n",
-       "38245  2024     12   31 2024-12-31                  17.0   \n",
-       "\n",
-       "       Average temperature [°C]  cloud_code  Global radiation mean [W/m2]  \\\n",
-       "0                         -30.5         9.0                           0.2   \n",
-       "1                         -13.7         9.0                          -0.2   \n",
-       "2                         -10.7         9.0                           0.3   \n",
-       "3                         -12.7         9.0                          -0.4   \n",
-       "4                         -14.6         9.0                          -1.0   \n",
-       "...                         ...         ...                           ...   \n",
-       "38241                      -1.3         0.0                          -1.4   \n",
-       "38242                      -2.6         8.0                          -0.6   \n",
-       "38243                      -2.9         8.0                          -0.7   \n",
-       "38244                      -6.2         8.0                          -0.3   \n",
-       "38245                      -4.5         8.0                          -0.3   \n",
-       "\n",
-       "       location  day_of_year  \n",
-       "0      isosyote            1  \n",
-       "1      isosyote            2  \n",
-       "2      isosyote            3  \n",
-       "3      isosyote            4  \n",
-       "4      isosyote            5  \n",
-       "...         ...          ...  \n",
-       "38241      pyha          362  \n",
-       "38242      pyha          363  \n",
-       "38243      pyha          364  \n",
-       "38244      pyha          365  \n",
-       "38245      pyha          366  \n",
-       "\n",
-       "[38246 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=[\"location\"], inplace=True)"
+    "df\n",
+    " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.drop(columns=[\"location\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -443,26 +213,25 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 38246 entries, 0 to 38245\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column                        Non-Null Count  Dtype         \n",
-      "---  ------                        --------------  -----         \n",
-      " 0   Year                          38246 non-null  int64         \n",
-      " 1   Month                         38246 non-null  int64         \n",
-      " 2   Day                           38246 non-null  int64         \n",
-      " 3   Date                          38246 non-null  datetime64[ns]\n",
-      " 4   Snow depth mean [cm]          38246 non-null  float64       \n",
-      " 5   Average temperature [°C]      38246 non-null  float64       \n",
-      " 6   cloud_code                    38246 non-null  float64       \n",
-      " 7   Global radiation mean [W/m2]  38246 non-null  float64       \n",
-      " 8   location                      38246 non-null  object        \n",
-      " 9   day_of_year                   38246 non-null  int32         \n",
-      "dtypes: datetime64[ns](1), float64(4), int32(1), int64(3), object(1)\n",
-      "memory usage: 2.8+ MB\n"
+      "Data columns (total 9 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   Observation station           37410 non-null  object \n",
+      " 1   Year                          38246 non-null  int64  \n",
+      " 2   Month                         38246 non-null  int64  \n",
+      " 3   Day                           38246 non-null  int64  \n",
+      " 4   Date                          38246 non-null  object \n",
+      " 5   Snow depth mean [cm]          37181 non-null  float64\n",
+      " 6   Average temperature [°C]      35630 non-null  float64\n",
+      " 7   cloud_code                    32281 non-null  float64\n",
+      " 8   Global radiation mean [W/m2]  37844 non-null  float64\n",
+      "dtypes: float64(4), int64(3), object(2)\n",
+      "memory usage: 2.6+ MB\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
+    "#df.info()"
    ]
   },
   {
@@ -481,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +718,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +839,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
